 added engineering notation
 "tip of the day"
 option to hide from taskbar and minimize to system tray

New functions:
 MIN: get the minimum
 MAX: get the maximum
 SUM: sum of all numbers
 PRODUCT: product of all numbers
 AVERAGE: average or mean
 GEOMEAN: geometrical mean
 SIGN: signum
 DEGREES: convert radian to degree
 RADIANS: convert degree to radian
 LG: base-2 logarithm
 CBRT: cubic root
 TRUNC: truncate digits
 FLOOR: floor
 CEIL: ceiling
 ROUND: round number
 NCR: combination
 NPR: permutation
 GCD: greatest common divisor
 SEC: secant
 CSC: cosecant
 COT: cotangent

Improvements and bug fixes:
 fixed accuracy problem when calculating 10^x where x is integer
 variable names are now case sensitive
 shortcut Ctrl+Q to quit (ubuntu bug#102734)
 shortcut key F6 to focus and select input
 shortcut key Esc to clear the input
 improved (and non-intrusive) autocalc tip
 reserved variable names are now case sensitive "pi" and "ans"
 color for error messages can be customized
 fixed exp(x) when x is large
 improved error system and messages
 fixed issue #33: exponential notation misnamed
 fixed issue #32: crash when inserting ( after variable
 minor fixed for function tan(x)
 binary is now relocatable (using BinReloc)

SpeedCrunch 0.7
---------------
fixed CMake build under Mac OS X
fixed very wide buttons when using Cleanlooks style
updated link to new homepage
fixed issue #17: crash with segmentation fault
fixed issue #22: segfault after equal,backspace,evaluate, operator
fixed issue #27: program closed unexpectedly
fixed issue #28: crash on pressing "/"

SpeedCrunch 0.7-beta2
---------------------
support for building using CMake
fixed issue #9: unary minus before a function
fixed issue #7: function argument in brackets
fixed issue #6: exponentiation of a negative number returns NaN
fixed issue #5: auto calculation shows up even on the first run
fixed issue #4: should scroll automatically to show the result